[gd_scene load_steps=2 format=2]

[ext_resource path="res://godot/scenes/interface/menu/servermenu.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PanelHost" type="Panel" parent="."]
margin_top = 96.0
margin_right = 192.0
margin_bottom = 232.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelHost"]
margin_left = 56.0
margin_right = 141.0
margin_bottom = 14.0
text = "Create Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="PanelHost"]
margin_left = 8.0
margin_top = 16.0
margin_right = 94.0
margin_bottom = 30.0
text = "Server Name:"

[node name="txtServerName" type="LineEdit" parent="PanelHost"]
margin_left = 8.0
margin_top = 32.0
margin_right = 184.0
margin_bottom = 56.0
text = "My Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="PanelHost"]
margin_left = 8.0
margin_top = 56.0
margin_right = 48.0
margin_bottom = 70.0
text = "Port:"

[node name="txtPort" type="LineEdit" parent="PanelHost"]
margin_left = 8.0
margin_top = 72.0
margin_right = 66.0
margin_bottom = 96.0
text = "4464"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="PanelHost"]
margin_left = 120.0
margin_top = 56.0
margin_right = 160.0
margin_bottom = 70.0
text = "Slots:"

[node name="txtMaxPlayers" type="SpinBox" parent="PanelHost"]
margin_left = 120.0
margin_top = 72.0
margin_right = 194.0
margin_bottom = 96.0
min_value = 1.0
max_value = 10.0
value = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btCreate" type="Button" parent="PanelHost"]
margin_left = 120.0
margin_top = 104.0
margin_right = 173.0
margin_bottom = 124.0
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelJoin" type="Panel" parent="."]
margin_top = 240.0
margin_right = 192.0
margin_bottom = 336.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelJoin"]
margin_left = 64.0
margin_right = 131.0
margin_bottom = 14.0
text = "Join Server"

[node name="Label2" type="Label" parent="PanelJoin"]
margin_top = 16.0
margin_right = 40.0
margin_bottom = 30.0
text = "IP:"

[node name="txtIP" type="LineEdit" parent="PanelJoin"]
margin_top = 32.0
margin_right = 112.0
margin_bottom = 56.0
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="PanelJoin"]
margin_left = 120.0
margin_top = 16.0
margin_right = 160.0
margin_bottom = 30.0
text = "Port:"

[node name="txtPort" type="LineEdit" parent="PanelJoin"]
margin_left = 120.0
margin_top = 32.0
margin_right = 178.0
margin_bottom = 56.0
text = "4464"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btJoin" type="Button" parent="PanelJoin"]
margin_left = 120.0
margin_top = 64.0
margin_right = 176.0
margin_bottom = 84.0
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelPlayer" type="Panel" parent="."]
margin_right = 192.0
margin_bottom = 88.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelPlayer"]
margin_left = 56.0
margin_top = 8.0
margin_right = 141.0
margin_bottom = 22.0
text = "Player Name:"

[node name="txtPlayerName" type="LineEdit" parent="PanelPlayer"]
margin_left = 32.0
margin_top = 24.0
margin_right = 168.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="PanelPlayer"]
margin_left = 8.0
margin_top = 48.0
margin_right = 41.0
margin_bottom = 79.0
text = "Color
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btColor" type="ColorPickerButton" parent="PanelPlayer"]
margin_left = 8.0
margin_top = 64.0
margin_right = 48.0
margin_bottom = 84.0
color = Color( 1, 1, 1, 1 )
edit_alpha = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PanelHost/btCreate" to="." method="_on_btCreate_pressed"]
[connection signal="pressed" from="PanelJoin/btJoin" to="." method="_on_btJoin_pressed"]
